Example shell task 	* python's logger does not work at the moment

--- a/pom.xml
+++ b/pom.xml
@@ -66,5 +66,6 @@
 		<module>task-sync-test</module>
 		<module>task-sync-test2</module>
 		<module>task-test-scala</module>
+		<module>task-test-shell</module>
 	</modules>
 </project>
