--- a/pom.xml
+++ b/pom.xml
@@ -69,4 +69,20 @@
 		<module>task-test-shell</module>
 		<module>task-example-results</module>
 	</modules>
+
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>everbeen.cz-plugins-snapshots</id>
+			<url>http://everbeen.cz/artifactory/plugins-snapshot-local</url>
+		</pluginRepository>
+	</pluginRepositories>
+
+	<repositories>
+		<repository>
+			<id>everbeen.cz-snapshots</id>
+			<url>http://everbeen.cz/artifactory/libs-snapshot-local</url>
+		</repository>
+	</repositories>
+
 </project>
