--- a/task-example-checkpoints/pom.xml
+++ b/task-example-checkpoints/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>task-example-results</artifactId>
+	<artifactId>task-example-checkpoints</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
 	<dependencies>
@@ -37,11 +37,12 @@
 				<configuration>
 
 					<taskDescriptors>
-						<param>src/main/resources/ExampleTaskResults.td.xml</param>
+						<param>src/main/resources/ExampleTaskCheckpoints.td.xml</param>
 					</taskDescriptors>
 
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
