--- a/task-example-helloworld/pom.xml
+++ b/task-example-helloworld/pom.xml
@@ -9,8 +9,9 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>task-example-results</artifactId>
+	<artifactId>task-example-helloworld</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+
 
 	<dependencies>
 		<dependency>
@@ -37,11 +38,12 @@
 				<configuration>
 
 					<taskDescriptors>
-						<param>src/main/resources/ExampleTaskResults.td.xml</param>
+						<param>src/main/resources/HelloWorld.td.xml</param>
 					</taskDescriptors>
 
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
