Groovy example task added.

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 		<module>task-sync-test</module>
 		<module>task-sync-test2</module>
 		<module>task-test-scala</module>
+		<module>task-test-groovy</module>
 		<module>task-test-shell</module>
 		<module>task-example-results</module>
 		<module>task-example-checkpoints</module>
