Enhancements to the example-benchmark.

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 		<module>task-example-results</module>
 		<module>task-example-checkpoints</module>
 		<module>task-example-helloworld</module>
+		<module>example-benchmark</module>
 	</modules>
 
 
