--- a/example-benchmark/pom.xml
+++ b/example-benchmark/pom.xml
@@ -12,6 +12,12 @@
 	<artifactId>example-benchmark</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
+	<properties>
+		<jfreechart.version>1.0.13</jfreechart.version>
+		<commons-math3.version>3.2</commons-math3.version>
+		<commons-codec.version>1.8</commons-codec.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>cz.cuni.mff.d3s.been</groupId>
@@ -23,6 +29,19 @@
 			<groupId>cz.cuni.mff.d3s.been</groupId>
 			<artifactId>benchmark-api</artifactId>
 			<version>${been.version}</version>
+		</dependency>
+
+		<!-- Evaluator dependencies -->
+		<dependency>
+			<groupId>jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>${jfreechart.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>${commons-math3.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -43,6 +62,7 @@
 				<configuration>
 
 					<taskDescriptors>
+						<param>src/main/resources/com/example/been/benchmark/ExampleEvaluator.td.xml</param>
 						<param>src/main/resources/com/example/been/benchmark/ExampleBenchmark.td.xml</param>
 					</taskDescriptors>
 
