--- a/task-test-shell/pom.xml
+++ b/task-test-shell/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>cz.cuni.mff.d3s.been</groupId>
 		<artifactId>testing-tasks</artifactId>
-		<version>3.0.0</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>task-test-shell</artifactId>
